[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-box"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "alembic",
    "pydantic-settings[toml]>=2.12.0",
    "typer>=0.20.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "httpx",
]

[project.scripts]
brain-box = "brain_box.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["brain_box"]

[tool.hatch.build.targets.wheel.force-include]
webapp = "webapp"

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
