[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brain-box"
version = "0.1.0"
description = ""
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlmodel",
    "alembic",
    "pydantic-settings[toml]>=2.12.0",
    "typer>=0.20.0",
    "pwdlib[argon2]>=0.3.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "pytest",
    "httpx",
    "mypy>=1.19.1",
]

[project.scripts]
brain-box = "brain_box.cli:app"

[tool.hatch.build.force-include]
"pwa/out" = "brain_box/webapp"

[tool.hatch.build.targets.sdist]
exclude = [
    "pwa", 
    ".gitmodules",
]

[tool.hatch.build.targets.wheel]
packages = ["brain_box"]
exclude = [
    "brain_box/tests",
]

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
pythonpath = ["."]
env = [ 
    "BRAINBOX_DATABASE__URL=sqlite:///:memory:",
]
